# monolith

./: Cargo.toml  README.md
demosite/: deeper.txt  index.txt  linked_resource.txt  parallel.txt
graphs/: current.gv  proposed.gv
src/: asset.rs  lib.rs  main.rs  util.rs
src/resources/: demo_resource.rs  inert_resource.rs  mod.rs
