[package]
name = "monolith"
version = "3.0.0-proof-of-concept"
authors = ["Emi Simpson <emi@alchemi.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]

# Managing multiple futures
futures = "0.3.1"

# Downloading assets
reqwest = "0.10.0-alpha.2"

# Accessing data returned by reqwest
# (also a dependency of reqwest)
bytes = "0.4.12"

# Parsing DemoResources
regex = "1.3.1"
lazy_static = "1.4.0"

# Generating dataurls
base64 = "0.11.0"
